deprecated/kube/kubernetes/apps/base/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 80
    targetPort: 7878
    protocol: TCP
  type: ClusterIP
